--- a/libraries.gradle
+++ b/libraries.gradle
@@ -4,11 +4,13 @@ subprojects {
     maven {
       url 'http://repository-jongo.forge.cloudbees.com/release'
     }
+    maven {
+      url 'https://maven.atlassian.com/3rdparty'
+    }
   }
 }
 
 def guiceVersion = '4.0-beta4'
-def handlebarsVersion = '1.3.1'
 def jacksonVersion = '2.3.3'
 def log4jVersion = '2.0-rc1'
 def resteasyVersion = '3.0.6.Final'
@@ -48,9 +50,14 @@ ext.libs = [
 
   resteasy_client:     "org.jboss.resteasy:resteasy-client:$resteasyVersion",
 
-  handlebars:          [
-      "com.github.jknack:handlebars:$handlebarsVersion",
-      "com.github.jknack:handlebars-jackson2:$handlebarsVersion",
+  closure_templates_standalone: [
+      'com.google.template.soy:soycompiler:20140422-8ece726-atlassian2',
+      'args4j:args4j:2.0.28',
+    ],
+  closure_templates:   [
+      'com.google.template.soy:soycompiler:20140422-8ece726-atlassian2',
+      "com.google.inject.extensions:guice-assistedinject:$guiceVersion",
+      "com.google.inject.extensions:guice-multibindings:$guiceVersion",
     ],
 
   jackson_annotations: "com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion",
