Extract template rendering to reuse it for e-mails.
Change-Id: Ieaf3e0d33ac82c46013d25143ef138f886729950

--- a/oasis-webapp/webapp.gradle
+++ b/oasis-webapp/webapp.gradle
@@ -57,7 +57,7 @@ task generateSoyParseInfo(type: JavaExec) {
   ext.outputDir = "$buildDir/generated-sources/soy/"
   outputs.dir outputDir
 
-  def javaPackage = 'oasis.web.view.soy'
+  def javaPackage = 'oasis.soy.templates'
 
   main = 'com.google.template.soy.SoyParseInfoGenerator'
   classpath = configurations.soy
