--- a/oasis-webapp/src/main/resources/reference.conf
+++ b/oasis-webapp/src/main/resources/reference.conf
@@ -38,5 +38,12 @@ oasis={
     access-token-duration = 1 hour
     refresh-token-duration = 18250 days # 50 years
   }
+  mail = {
+    disabled=false
+    server="smtp://localhost"
+    starttls={
+      enable=true
+    }
+  }
 }
 swagger.api.version=1.0
