Exclude mockito-all from Swagger transitive deps (conflicts mockito-core)
Change-Id: I299d68b54b529ab057614098985f9cb9809d3779

--- a/libraries.gradle
+++ b/libraries.gradle
@@ -93,7 +93,8 @@ ext.libs = [
   swagger_annotations: "com.wordnik:swagger-annotations:$swaggerVersion",
   swagger_jaxrs:       [
       dependencies.create("com.wordnik:swagger-jaxrs_2.10:$swaggerVersion") {
-        exclude module: 'jsr311-api' // conflicts with org.jboss.resteasy:jaxrs-api
+        exclude module: 'jsr311-api'  // conflicts with org.jboss.resteasy:jaxrs-api
+        exclude module: 'mockito-all' // conflicts with mockito-core
       },
       'javax.servlet:servlet-api:2.5'
     ],
