Update to Gradle 2.1 now that gradle-errorprone-plugin has been updated
Change-Id: I09f6c8f478866946e7d14b70af98b1ddae9306ee

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ subprojects {
 
 buildscript {
   repositories {
+maven { url 'https://oss.sonatype.org/content/repositories/netltgt-1004/' }
     mavenCentral()
   }
   dependencies {
@@ -37,5 +38,5 @@ buildscript {
 }
 
 task wrapper(type: Wrapper) {
-  gradleVersion = '1.12'
+  gradleVersion = '2.1'
 }
