Refactor and rename auth configuration
Change-Id: I233c0c7860a2942358377900b14ca06fe99d0cc4

--- a/oasis-webapp/src/main/resources/reference.conf
+++ b/oasis-webapp/src/main/resources/reference.conf
@@ -24,15 +24,11 @@ oasis={
       url="http://localhost:9200"
     }
   }
-  session = {
-    max-idle-timeout = 6 hours
-  }
-  openid-connect = {
+  auth = {
     private-key-path=private.key
     public-key-path=public.key
+    sid-token-duration = 6 hours
     id-token-duration = 10 minutes
-  }
-  oauth = {
     authorization-code-duration = 1 minute
     access-token-duration = 1 hour
     refresh-token-duration = 18250 days # 50 years
