--- a/libraries.gradle
+++ b/libraries.gradle
@@ -15,10 +15,14 @@ def jacksonVersion = '2.3.3'
 def log4jVersion = '2.0-rc1'
 def resteasyVersion = '3.0.6.Final'
 def swaggerVersion = '1.3.5'
+def immutablesVersion = '1.0.1'
 
 ext.libs = [
   guava:               'com.google.guava:guava:17.0',
   jsr305:              'com.google.code.findbugs:jsr305:2.0.3',
+
+  immutables:          "org.immutables:value:${immutablesVersion}",
+  immutables_compiler: "org.immutables:value-standalone:${immutablesVersion}",
 
   bouncycastle:        'org.bouncycastle:bcprov-jdk15on:1.50',
 
