Fix "incrementality" of generateSoyParseInfo build task
Change-Id: I0592b075ff3ab7de06e531d3028453fe8ea22a01

--- a/oasis-webapp/webapp.gradle
+++ b/oasis-webapp/webapp.gradle
@@ -58,6 +58,10 @@ task generateSoyParseInfo(type: JavaExec) {
   ext.outputDir = "$buildDir/generated-sources/soy/"
   outputs.dir outputDir
 
+  doFirst {
+    project.delete(outputDir)
+  }
+
   def javaPackage = 'oasis.soy.templates'
 
   main = 'com.google.template.soy.SoyParseInfoGenerator'
