--- a/libraries.gradle
+++ b/libraries.gradle
@@ -5,7 +5,7 @@ subprojects {
       url 'http://repository-jongo.forge.cloudbees.com/release'
     }
     maven {
-      url 'https://maven.atlassian.com/3rdparty'
+      url 'http://nexus/content/repositories/thirdparty'
     }
   }
 }
@@ -18,7 +18,7 @@ def swaggerVersion = '1.3.5'
 def immutablesVersion = '1.0.1'
 
 ext.libs = [
-  guava:               'com.google.guava:guava:17.0',
+  guava:               'com.google.guava:guava:18.0',
   jsr305:              'com.google.code.findbugs:jsr305:2.0.3',
 
   immutables:          "org.immutables:value:${immutablesVersion}",
@@ -55,11 +55,11 @@ ext.libs = [
   resteasy_client:     "org.jboss.resteasy:resteasy-client:$resteasyVersion",
 
   closure_templates_standalone: [
-      'com.google.template.soy:soycompiler:20140422-8ece726-atlassian2',
+      'com.google.template:soy:2014-10-31-atolcd-e74fcfa',
       'args4j:args4j:2.0.28',
     ],
   closure_templates:   [
-      'com.google.template.soy:soycompiler:20140422-8ece726-atlassian2',
+      'com.google.template:soy:2014-10-31-atolcd-e74fcfa',
       "com.google.inject.extensions:guice-assistedinject:$guiceVersion",
       "com.google.inject.extensions:guice-multibindings:$guiceVersion",
     ],
