Make sure oasis-dist depends on the runtime classpath of oasis-webapp.
Also remove leftover references to deleted log4j2-{cube,fluentd} modules

Change-Id: Ibe8b388efaf222e36c7dc11481c86c04c13e13ed

--- a/oasis-dist/dist.gradle
+++ b/oasis-dist/dist.gradle
@@ -19,10 +19,7 @@ configurations {
 }
 
 dependencies {
-  distLib(project(':oasis-webapp')) {
-    exclude module: 'log4j2-cube'
-    exclude module: 'log4j2-fluentd'
-  }
+  distLib project(path: ':oasis-webapp', configuration: 'runtime')
 
   jdeb libs.jdeb
 }
