--- a/libraries.gradle
+++ b/libraries.gradle
@@ -2,16 +2,13 @@ subprojects {
   repositories {
     mavenCentral()
     maven {
-      url 'http://repository-jongo.forge.cloudbees.com/release'
-    }
-    maven {
       url 'http://nexus/content/repositories/thirdparty'
     }
   }
 }
 
-def guiceVersion = '4.0-beta4'
-def jacksonVersion = '2.3.3'
+def guiceVersion = '4.0-beta5'
+def jacksonVersion = '2.4.3'
 def log4jVersion = '2.0-rc1'
 def resteasyVersion = '3.0.6.Final'
 def swaggerVersion = '1.3.5'
@@ -19,17 +16,17 @@ def immutablesVersion = '1.0.1'
 
 ext.libs = [
   guava:               'com.google.guava:guava:18.0',
-  jsr305:              'com.google.code.findbugs:jsr305:2.0.3',
+  jsr305:              'com.google.code.findbugs:jsr305:3.0.0',
 
   immutables:          "org.immutables:value:${immutablesVersion}",
   immutables_compiler: "org.immutables:value-standalone:${immutablesVersion}",
 
-  bouncycastle:        'org.bouncycastle:bcprov-jdk15on:1.50',
+  bouncycastle:        'org.bouncycastle:bcprov-jdk15on:1.51',
 
-  google_oauth_client: dependencies.create('com.google.oauth-client:google-oauth-client-java6:1.18.0-rc') {
+  google_oauth_client: dependencies.create('com.google.oauth-client:google-oauth-client-java6:1.19.0') {
       exclude module: 'httpclient'
     },
-  google_http_client:  dependencies.create('com.google.http-client:google-http-client-jackson2:1.18.0-rc') {
+  google_http_client:  dependencies.create('com.google.http-client:google-http-client-jackson2:1.19.0') {
       exclude module: 'httpclient'
     },
 
@@ -39,9 +36,9 @@ ext.libs = [
     ],
 
   jongo:               [
-      'org.jongo:jongo:1.1-early-20140221-1732',
-      'de.undercouch:bson4jackson:2.3.1',
-      'org.mongodb:mongo-java-driver:2.12.1',
+      'org.jongo:jongo:1.1',
+      'de.undercouch:bson4jackson:2.4.0',
+      'org.mongodb:mongo-java-driver:2.12.4',
     ],
 
   resteasy_netty:      [
@@ -49,14 +46,14 @@ ext.libs = [
         exclude module: 'slf4j-simple'
         exclude module: 'resteasy-jackson2-provider'
       },
-      'io.netty:netty:3.9.2.Final',
+      'io.netty:netty:3.9.5.Final',
     ],
 
   resteasy_client:     "org.jboss.resteasy:resteasy-client:$resteasyVersion",
 
   closure_templates_standalone: [
       'com.google.template:soy:2014-10-31-atolcd-e74fcfa',
-      'args4j:args4j:2.0.28',
+      'args4j:args4j:2.0.29',
     ],
   closure_templates:   [
       'com.google.template:soy:2014-10-31-atolcd-e74fcfa',
@@ -75,11 +72,11 @@ ext.libs = [
       "com.fasterxml.jackson.module:jackson-module-jaxb-annotations:$jacksonVersion",
     ],
 
-  jdeb:                'org.vafer:jdeb:1.1.1',
+  jdeb:                'org.vafer:jdeb:1.3',
 
-  joda_time:           'joda-time:joda-time:2.3',
+  joda_time:           'joda-time:joda-time:2.5',
 
-  galimatias:          'io.mola.galimatias:galimatias:0.0.4',
+  galimatias:          'io.mola.galimatias:galimatias:0.2.0',
 
   mail:                'com.sun.mail:javax.mail:1.5.2',
 
@@ -90,7 +87,7 @@ ext.libs = [
 
   log4j_runtime:       [
       "org.apache.logging.log4j:log4j-slf4j-impl:$log4jVersion",
-      'com.lmax:disruptor:3.2.0',
+      'com.lmax:disruptor:3.3.0',
     ],
 
   // Swagger
@@ -104,16 +101,16 @@ ext.libs = [
     ],
   swagger_ui:          'org.webjars:swagger-ui:2.0.17',
 
-  args4j:              'args4j:args4j:2.0.28',
+  args4j:              'args4j:args4j:2.0.29',
 
   config:              'com.typesafe:config:1.2.1',
 
   junit:               'junit:junit:4.11',
 
-  mockito:             'org.mockito:mockito-core:1.9.5',
+  mockito:             'org.mockito:mockito-core:1.10.8',
 
   jukito:              [
-      'org.jukito:jukito:1.4',
+      'org.jukito:jukito:1.4.1',
       "com.google.inject.extensions:guice-assistedinject:$guiceVersion",
     ],
 
