Use real tokens for account activation (rather than just the account ID)
Change-Id: I64f10328213a535425bf5871299e27dc88e92ff9

--- a/oasis-webapp/src/main/resources/reference.conf
+++ b/oasis-webapp/src/main/resources/reference.conf
@@ -25,6 +25,7 @@ oasis={
     authorization-code-duration = 1 minute
     access-token-duration = 1 hour
     refresh-token-duration = 18250 days # 50 years
+    account-activation-token-duration = 12 hours
   }
   mail = {
     disabled=false
