Implement password reset (aka "I forgot my password")
Change-Id: I51a84bef77893e3644ceee8296286d0f8d0bf60f

--- a/oasis-webapp/src/main/resources/reference.conf
+++ b/oasis-webapp/src/main/resources/reference.conf
@@ -26,6 +26,7 @@ oasis={
     access-token-duration = 1 hour
     refresh-token-duration = 18250 days # 50 years
     account-activation-token-duration = 12 hours
+    change-password-token-duration = 1 hour
   }
   mail = {
     disabled=false
