Make extractMessagesFromTemplates use en-GB as source locale
en-GB is our default locale in code; the default locale of Closure
Templates if not specified is 'en'.

Change-Id: I917d5345254cba47b4e46109d686da8743ef9c07

--- a/oasis-webapp/webapp.gradle
+++ b/oasis-webapp/webapp.gradle
@@ -91,7 +91,8 @@ task extractMessagesFromTemplates(type: JavaExec) {
   classpath = configurations.soy
   args = [
       '--allowExternalCalls',   'false',
-      '--srcs',                 srcs.files.join(',')
+      '--srcs',                 srcs.files.join(','),
+      '--sourceLocaleString',   'en-GB'
     ]
   if (project.hasProperty("outputFile")) {
     args += ['--outputFile', project.outputFile]
