Use ICU4J ULocale instead of java.util.Locale for JDK-independence
As a result, we can have locale names translated in Bulgarian and Turkish.

ICU4J however doesn't provide the equivalent to ResourceBundle.Control's
getCandidateLocales, so we still use java.util.Locale in a few places.

Change-Id: I8f85345d242099298c9be0fd6c03cbd9b1b5a8ca

--- a/oasis-model/model.gradle
+++ b/oasis-model/model.gradle
@@ -6,6 +6,7 @@ dependencies {
     compile libs.jackson_annotations
     compile libs.joda_time
     compile libs.jackson_joda
+    compile libs.icu4j
 
     testCompile libs.junit
     testCompile libs.assertj
