--- a/libraries.gradle
+++ b/libraries.gradle
@@ -76,6 +76,8 @@ ext.libs = [
 
   joda_time:           'joda-time:joda-time:2.5',
 
+  icu4j:               'com.ibm.icu:icu4j:54.1.1',
+
   galimatias:          'io.mola.galimatias:galimatias:0.2.0',
 
   mail:                'com.sun.mail:javax.mail:1.5.2',
