--- a/oasis-webapp/webapp.gradle
+++ b/oasis-webapp/webapp.gradle
@@ -11,6 +11,7 @@ dependencies {
   compile libs.guice
   compile libs.jongo
   compile libs.joda_time
+  compile libs.icu4j
   compile libs.galimatias
   compile libs.mail
   compile libs.jackson
