Setup HTTP client connection pooling.
Resteasy HTTP Client defaults to no-pooling, using Apache's HttpClient
BasicHttpClientConnectionManager which throws IllegalStateException on
concurrent uses.
Setup pooling using Apache HttpClient's PoolingHttpClientConnectionManager
default settings by default so that at least JAX-RS Client behaves as
expected and can be used as a singleton.

TODO: investigate replacing Apache HttpClient with OkHttp.

Change-Id: Ib1a66ef4b629494e46957466d28451db4970d4c7

--- a/oasis-webapp/src/main/resources/reference.conf
+++ b/oasis-webapp/src/main/resources/reference.conf
@@ -1,6 +1,11 @@
 oasis={
   http={
     port=8080
+    client={
+      // These are Apache PoolingHttpClientConnectionManager's defaults
+      connection-pool-size=20
+      max-pooled-per-route=2
+    }
   }
   auditlog={
     disabled=false
