--- a/oasis-webapp/src/main/resources/reference.conf
+++ b/oasis-webapp/src/main/resources/reference.conf
@@ -30,6 +30,7 @@ oasis={
     refresh-token-duration = 18250 days # 50 years
     account-activation-token-duration = 12 hours
     change-password-token-duration = 1 hour
+    password-minimum-length = 6
   }
   mail = {
     disabled=false
