--- a/oasis-webapp/webapp.gradle
+++ b/oasis-webapp/webapp.gradle
@@ -2,7 +2,7 @@ apply plugin: 'java'
 
 dependencies {
   compile project(':oasis-model')
-  compile project(':log4j2-logstash')
+  compile libs.log4j2
   compile libs.jsr305
   compile libs.guava
   compile libs.bouncycastle
@@ -18,6 +18,7 @@ dependencies {
   compile libs.args4j
   compile libs.config
   compile libs.resteasy_netty
+  compile libs.resteasy_client
   compile libs.closure_templates
   compile libs.swagger_jaxrs
 
