--- a/libraries.gradle
+++ b/libraries.gradle
@@ -47,9 +47,14 @@ ext.libs = [
         exclude module: 'resteasy-jackson2-provider'
       },
       'io.netty:netty:3.9.5.Final',
+      // For some reason, resteasy-jaxrs depends on httpclient…
+      'org.apache.httpcomponents:httpclient:4.2.6',
     ],
 
-  resteasy_client:     "org.jboss.resteasy:resteasy-client:$resteasyVersion",
+  resteasy_client:     [
+      "org.jboss.resteasy:resteasy-client:$resteasyVersion",
+      'org.apache.httpcomponents:httpclient:4.2.6',
+    ],
 
   closure_templates_standalone: [
       'com.google.template:soy:2014-10-31-atolcd-e74fcfa',
