--- a/libraries.gradle
+++ b/libraries.gradle
@@ -9,7 +9,7 @@ subprojects {
 
 def guiceVersion = '4.0-beta5'
 def jacksonVersion = '2.4.3'
-def log4jVersion = '2.0-rc1'
+def log4jVersion = '2.1'
 def resteasyVersion = '3.0.6.Final'
 def swaggerVersion = '1.3.5'
 def immutablesVersion = '1.0.1'
@@ -88,7 +88,7 @@ ext.libs = [
   mail:                'com.sun.mail:javax.mail:1.5.2',
 
   // Keep version in sync with the one implemented by log4j-slf4j-impl, or it'll fail at runtime
-  slf4j:               'org.slf4j:slf4j-api:1.7.5',
+  slf4j:               'org.slf4j:slf4j-api:1.7.7',
 
   log4j2:              "org.apache.logging.log4j:log4j-core:$log4jVersion",
 
