Update Apache HttpClient to >=4.3.2 to get SNI support
Java 7 supporting SNI, I was sure we were OK, but it turns out Apache
HttpClient itself reimplements parts of the SSL/TLS stack and didn't
support SNI until 4.3.2.

Change-Id: I05a23c72b45d727ee76892f8d6adecf1a6c4c8b3

--- a/libraries.gradle
+++ b/libraries.gradle
@@ -8,11 +8,12 @@ subprojects {
 }
 
 def guiceVersion = '4.0-beta5'
+def httpclientVersion = '4.3.6'
+def immutablesVersion = '1.0.1'
 def jacksonVersion = '2.4.3'
 def log4jVersion = '2.1'
 def resteasyVersion = '3.0.6.Final'
 def swaggerVersion = '1.3.5'
-def immutablesVersion = '1.0.1'
 
 ext.libs = [
   guava:               'com.google.guava:guava:18.0',
@@ -48,12 +49,12 @@ ext.libs = [
       },
       'io.netty:netty:3.9.5.Final',
       // For some reason, resteasy-jaxrs depends on httpclient…
-      'org.apache.httpcomponents:httpclient:4.2.6',
+      "org.apache.httpcomponents:httpclient:${httpclientVersion}",
     ],
 
   resteasy_client:     [
       "org.jboss.resteasy:resteasy-client:$resteasyVersion",
-      'org.apache.httpcomponents:httpclient:4.2.6',
+      "org.apache.httpcomponents:httpclient:${httpclientVersion}",
     ],
 
   closure_templates_standalone: [
