--- a/oasis-model/model.gradle
+++ b/oasis-model/model.gradle
@@ -8,6 +8,9 @@ dependencies {
     compile libs.jackson_joda
     compile libs.icu4j
 
+    compile libs.immutables
+    apt libs.immutables_compiler
+
     testCompile libs.junit
     testCompile libs.assertj
 }
