Error-prone 2.0 is out, but is incompatible with gradle-errorprone-plugin.
Force use of error_prone:1.+ until gradle-errorprone-plugin is updated
and possibly we move to Java 8 (error_prone 2.0 requires Java 8 or
prepending javac 8 to the bootclasspath).

Change-Id: I777dbabd95057c1c2c0774ed2929a12c42295d32

--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,9 @@ ext.versionlessOutputs = project.hasProperty("versionlessOutputs") ? Boolean.par
 
 subprojects {
   apply plugin: 'errorprone'
+  configurations.errorprone {
+    resolutionStrategy.force 'com.google.errorprone:error_prone_core:1.+'
+  }
 
   apply plugin: 'idea' // IDEA needs extra configuration for generated sources *sigh*
   idea {
