Error-prone 2.0.1 and gradle-errorprone-plugin 0.0.6 are here!
Change-Id: I87cc647bf5fe9248c89b5670b2d28fedc3430a7c

--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ ext.versionlessOutputs = project.hasProperty("versionlessOutputs") ? Boolean.par
 subprojects {
   apply plugin: 'errorprone'
   configurations.errorprone {
-    resolutionStrategy.force 'com.google.errorprone:error_prone_core:1.+'
+    resolutionStrategy.force 'com.google.errorprone:error_prone_core:2.0.1'
   }
 
   apply plugin: 'idea' // IDEA needs extra configuration for generated sources *sigh*
@@ -62,7 +62,7 @@ buildscript {
     mavenCentral()
   }
   dependencies {
-    classpath 'net.ltgt.gradle:gradle-errorprone-plugin:latest.release'
+    classpath 'net.ltgt.gradle:gradle-errorprone-plugin:0.0.6'
   }
 }
 
