Exclude 'scannotation' which is only used in a servlet context.
Scannotation was bringing another version of javassist than the one used
by Swagger, which escaped conflict mediation due to differing groupId.
For good measure, we also add a module replacement declaration to make
sure we won't have that problem later (it fortunately didn't cause any
error apparently – and Swagger is low-priority, we don't really care if
it breaks).

Change-Id: I52fa5169f57889ef7033d35bad0aefd5f717b6c8

--- a/libraries.gradle
+++ b/libraries.gradle
@@ -2,6 +2,13 @@ subprojects {
   repositories {
     mavenCentral()
   }
+  dependencies {
+    modules {
+      module("javassist:javassist") {
+        replacedBy("org.javassist:javassist")
+      }
+    }
+  }
 }
 
 def guiceVersion = '4.0-beta5'
@@ -42,11 +49,14 @@ ext.libs = [
       dependencies.create("org.jboss.resteasy:resteasy-netty:$resteasyVersion") {
         exclude module: 'slf4j-simple'
         exclude module: 'resteasy-jackson2-provider'
+        exclude module: 'scannotation'
       },
       'io.netty:netty:3.9.5.Final',
     ],
 
-  resteasy_client:     "org.jboss.resteasy:resteasy-client:$resteasyVersion",
+  resteasy_client:     dependencies.create("org.jboss.resteasy:resteasy-client:$resteasyVersion") {
+      exclude module: 'scannotation'
+    },
 
   closure_templates_standalone: [
       'com.google.template:soy:2015-02-10',
