Introduce elasticsearch database for indexing catalog entries
Sharding the ElasticSearch database can produce irrelevant scores if there
aren't sufficient data. So let's avoid sharding for the moment.

Also, ElasticSearch is configured here to store data similarly to how it's
stored in MongoDB. Localized properties are managed through dynamic
templates to provide a specific analyzer depending on the locale (deduced
from property name).
The other properties are either not indexed for full text search, or not
searchable at all.

Change-Id: I8e989dcd2217668c0aa78eb53df79781efb4f883

--- a/libraries.gradle
+++ b/libraries.gradle
@@ -66,6 +66,11 @@ ext.libs = [
       'org.mongodb:mongo-java-driver:2.13.0',
     ],
 
+  elasticsearch:       [
+      'org.elasticsearch:elasticsearch:1.4.4',
+      'io.searchbox:jest:0.1.5'
+    ],
+
   resteasy_netty:      [
       dependencies.create("org.jboss.resteasy:resteasy-netty:$resteasyVersion") {
         exclude module: 'slf4j-simple'
