--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,13 @@ mongo:
   ports:
     - "27017:27017"
   volumes:
-    - docker/mongo:/data/db
+    - .docker/mongo:/data/db
 
 elasticsearch:
   image: dockerfile/elasticsearch:latest
   ports:
     - "9200:9200"
   volumes:
-    - docker/elasticsearch:/data
+    - .docker/elasticsearch:/data
   command: /elasticsearch/bin/elasticsearch -Des.config=/data/elasticsearch.yml
 
