Make new organization membership 'pending'
When a user is invited to an organization, notify organization admins and
email the invited user.

Change-Id: I2625eb39c8d39032052d47d53b53633c51aafc03

--- a/oasis-webapp/src/main/resources/reference.conf
+++ b/oasis-webapp/src/main/resources/reference.conf
@@ -23,6 +23,9 @@ oasis={
     change-password-token-duration = 1 hour
     password-minimum-length = 6
   }
+  userdirectory={
+    invitation-token-duration = 365 days
+  }
   mail = {
     disabled=false
     server="smtp://localhost"
