--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,9 @@ mongo:
     - .docker/mongo:/data/db
 
 elasticsearch:
-  image: dockerfile/elasticsearch:latest
+  image: elasticsearch:1.3
   ports:
     - "9200:9200"
   volumes:
-    - .docker/elasticsearch:/data
-  command: /elasticsearch/bin/elasticsearch -Des.config=/data/elasticsearch.yml
+    - .docker/elasticsearch:/usr/share/elasticsearch/data
 
