Make sure to use only AGPLv3-compatible dependencies
Specifically:
 * javax.servlet and javax.activation are licensed under CDDL
 * jboss-annotations-api_1.1_spec and javax.mail are dual-licensed
   under CDDL and GPLv2 with classpath exception
 * jcip-annotations are licensed under Creative Commons Attribution

All of these are replaced with Apache-licensed alternatives (most of
them from the Apache Geronimo project).

This reapplies commit a3cbb71b1b22af0134ea3773e4965db0bf2cf637 with the
additional changes of:
 * updating the creation of javax.mail.Session to be compatible with
   non-Sun implementations,
 * updating Swagger to remove the dom4j transitive dependency which is
   GPL-incompatible.

Change-Id: Ie265afcf2771272354cbd3221492782f29dc5e37

--- a/libraries.gradle
+++ b/libraries.gradle
@@ -1,4 +1,4 @@
-subprojects {
+allprojects {
   repositories {
     mavenCentral()
   }
@@ -6,6 +6,27 @@ subprojects {
     modules {
       module("javassist:javassist") {
         replacedBy("org.javassist:javassist")
+      }
+    }
+  }
+  configurations.all {
+    resolutionStrategy {
+      // AGPL-compatible alternatives (mostly Apache v2)
+      def replacements = [
+        'org.jboss.spec.javax.annotation:jboss-annotations-api_1.1_spec': 'org.apache.geronimo.specs:geronimo-annotation_1.1_spec:1.0.1',
+        'javax.activation:activation': 'org.apache.geronimo.specs:geronimo-activation_1.1_spec:1.1',
+        // Use an Apache-licensed clean-room reimplementation of JCIP Annotations.
+        // The original JCIP Annotations are under Creative Commons Attribution License
+        // which is not recommended for software, and incompatible with AGPL.
+        // https://wiki.creativecommons.org/Frequently_Asked_Questions#Can_I_apply_a_Creative_Commons_license_to_software.3F
+        'net.jcip:jcip-annotations': 'com.github.stephenc.jcip:jcip-annotations:1.0-1',
+      ]
+      eachDependency { DependencyResolveDetails details ->
+        def key = details.requested.group + ':' + details.requested.name
+        def replacement = replacements[key]
+        if (replacement) {
+          details.useTarget(replacement)
+        }
       }
     }
   }
@@ -17,7 +38,7 @@ def jacksonVersion = '2.5.1'
 def log4jVersion = '2.2'
 def okhttpVersion = '2.3.0'
 def resteasyVersion = '3.0.6.Final'
-def swaggerVersion = '1.3.5'
+def swaggerVersion = '1.3.12'
 
 ext.libs = [
   guava:               'com.google.guava:guava:18.0',
@@ -96,7 +117,7 @@ ext.libs = [
 
   galimatias:          'io.mola.galimatias:galimatias:0.2.1',
 
-  mail:                'com.sun.mail:javax.mail:1.5.2',
+  mail:                'org.apache.geronimo.javamail:geronimo-javamail_1.4_mail:1.8.4',
 
   // Keep version in sync with the one implemented by log4j-slf4j-impl, or it'll fail at runtime
   slf4j:               'org.slf4j:slf4j-api:1.7.7',
@@ -113,9 +134,8 @@ ext.libs = [
   swagger_jaxrs:       [
       dependencies.create("com.wordnik:swagger-jaxrs_2.10:$swaggerVersion") {
         exclude module: 'jsr311-api'  // conflicts with org.jboss.resteasy:jaxrs-api
-        exclude module: 'mockito-all' // conflicts with mockito-core
       },
-      'javax.servlet:servlet-api:2.5'
+      'org.apache.geronimo.specs:geronimo-servlet_2.5_spec:1.2'
     ],
   swagger_ui:          'org.webjars:swagger-ui:2.0.17',
 
@@ -138,4 +158,3 @@ ext.libs = [
       'org.assertj:assertj-joda-time:1.1.0',
     ],
 ]
-
