Add a MailHog node to Docker Compose to make it easier to test mail sending
To use it, pass the following system property (e.g. to "./gradlew run"):

    -Doasis.mail.server=smtp://127.0.0.1:1025

or put the following line in your gradle.properties:

    systemProp.oasis.mail.server=smtp://127.0.0.1:1025

Change-Id: Iefcac2c49423adeb15bd09d2b340c42ba2711109

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,9 @@ elasticsearch:
   volumes:
     - .docker/elasticsearch:/usr/share/elasticsearch/data
 
+mailhog:
+  image: mailhog/mailhog:latest
+  ports:
+    - "1025:1025"
+    - "8025:8025"
+
