Update to Immutables.org 2.0
Change-Id: I0e6fa916f619a8d24d4bd324f8ec822997044f38

--- a/oasis-model/model.gradle
+++ b/oasis-model/model.gradle
@@ -7,9 +7,10 @@ dependencies {
     compile libs.joda_time
     compile libs.jackson_joda
     compile libs.icu4j
+    compile libs.guava
 
-    compile libs.immutables
-    apt libs.immutables_compiler
+    compileOnly libs.immutables
+    apt         libs.immutables
 
     testCompile libs.junit
     testCompile libs.assertj
