--- a/libraries.gradle
+++ b/libraries.gradle
@@ -33,7 +33,6 @@ allprojects {
 }
 
 def guiceVersion = '4.0-beta5'
-def immutablesVersion = '1.1.3'
 def jacksonVersion = '2.5.1'
 def log4jVersion = '2.2'
 def okhttpVersion = '2.3.0'
@@ -44,8 +43,7 @@ ext.libs = [
   guava:               'com.google.guava:guava:18.0',
   jsr305:              'com.google.code.findbugs:jsr305:3.0.0',
 
-  immutables:          "org.immutables:value:${immutablesVersion}",
-  immutables_compiler: "org.immutables:value-standalone:${immutablesVersion}",
+  immutables:          'org.immutables:value:2.0.11',
 
   bouncycastle:        'org.bouncycastle:bcprov-jdk15on:1.52',
 
