Fix warnings + make warnings errors
Change-Id: Icfdd02a068e208bd0c05e69bd06482b76443d174

--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,7 @@ subprojects {
 
     tasks.withType(JavaCompile) {
       options.encoding = 'UTF-8'
+      options.compilerArgs += [ '-Werror', '-Xlint:unchecked' ]
     }
 
     if (versionlessOutputs) {
