Fix IntelliJ IDEA configuration wrt SoyParseInfo generated sources
net.ltgt.apt plugin changed output directory from generated-sources to
generated/source and updated the IDEA configuratino accordingly, meaning
that generated-sources was now excluded.
Changing the generateSoyParseInfo outputDir to generated/source fixed
this issue, and I went a step farther so that this directory is seen
by IDEA as generated-sources folder.

Change-Id: I543d705c9513e836bc990481d1775c356933e0ee

--- a/oasis-webapp/webapp.gradle
+++ b/oasis-webapp/webapp.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply plugin: 'idea'
 
 dependencies {
   compile project(':oasis-model')
@@ -56,7 +57,7 @@ task generateSoyParseInfo(type: JavaExec) {
   inputs.source srcs
   inputs.files deps
 
-  ext.outputDir = "$buildDir/generated-sources/soy/"
+  ext.outputDir = "$buildDir/generated/source/soy/"
   outputs.dir outputDir
 
   doFirst {
@@ -79,6 +80,11 @@ sourceSets.main.java {
   srcDir generateSoyParseInfo.outputDir
 }
 compileJava.dependsOn generateSoyParseInfo
+idea {
+  module {
+    generatedSourceDirs += file(generateSoyParseInfo.outputDir)
+  }
+}
 licenseMain {
   source = sourceSets.main.allSource.minus(fileTree(generateSoyParseInfo.outputDir))
 }
